src/global.scss
/*
 * App Global CSS
 * ----------------------------------------------------------------------------
 * Put style rules here that you want to apply globally. These styles are for
 * the entire app and not just one component. Additionally, this file can be
 * used as an entry point to import other CSS/Sass files to be included in the
 * output CSS.
 * For more information on global stylesheets, visit the documentation:
 * https://ionicframework.com/docs/layout/global-stylesheets
 */

/* Core CSS required for Ionic components to work properly */
@import "~@ionic/angular/css/core.css";

/* Basic CSS for apps built with Ionic */
@import "~@ionic/angular/css/normalize.css";
@import "~@ionic/angular/css/structure.css";
@import "~@ionic/angular/css/typography.css";
@import '~@ionic/angular/css/display.css';

/* Optional CSS utils that can be commented out */
@import "~@ionic/angular/css/padding.css";
@import "~@ionic/angular/css/float-elements.css";
@import "~@ionic/angular/css/text-alignment.css";
@import "~@ionic/angular/css/text-transformation.css";
@import "~@ionic/angular/css/flex-utils.css";

ion-toolbar {
    --ion-text-color: var(--ion-color-white) !important;
}


ion-item {
   border-radius: 5px;
   margin-bottom: 1px !important;
   background-color: var(--ion-color-secondary);
}

p::first-letter, button::first-letter, ion-col::first-letter {
  text-transform: capitalize !important;
}

ion-content {
    background-color: var(--ion-color-primary) !important;
    color: #000000 !important;
    overflow: auto !important;
}

ion-label {
    margin-left: 5px !important;
    width: 80%;
    color: #000000 !important;
}

p {
    color: #000000 !important;
}

input[type=number] {
    -moz-appearance:textfield !important;
}

input[type=number]::-webkit-inner-spin-button, input[type=number]::-webkit-outer-spin-button { 
    -webkit-appearance: none !important; 
    margin: 0 !important; 
}

ion-button {
  border-radius: 20px !important;
}

.darkbutton {
  color: #FFFFFF;
  background-color: var(--ion-color-primary) !important;
  --border-radius: 20px;
}

.display-inline-block {
  display: inline-block;
}

.alert-message {
    scrollbar-width: none !important;
  }

.picker-md .picker-prefix, .picker-md .picker-suffix, .picker-md .picker-opt.picker-opt-selected {
    font-weight: bold;
    background-color: #DEDEDE;
  }

.picker-md .picker-wrapper, .picker-md .picker-toolbar {
  background-color: #EBEBEE;
}

.scroll-content, .content {
  scrollbar-width: none;
}

.calendar-hour-column, .weekview-allday-label {
  width: 100px !important;
}

.table-bordered > thead > tr > th, .table-bordered > tbody > tr > th, .table-bordered > tfoot > tr > th, .table-bordered > thead > tr > td, .table-bordered > tbody > tr > td, .table-bordered > tfoot > tr > td {
  border: 1px solid #000000 !important;
}

.weekview-allday-content-table td, {
  border: 1px solid #000000 !important;
  border-top: transparent !important;
}

.weekview-allday-label {
  border-top: transparent !important;
  border-left: 1px solid #000000 !important;
  border-bottom: 1px solid #000000 !important;
}

.slide-container {
  padding: 2px !important;
  overflow: scroll !important;
  scrollbar-width: none !important;
}

.weekview-current {
  background-color: #439194 !important;
}


.signInButton {
    margin-left: 20px;
}

.secondary {
  width: 70%;
  margin: auto;
  margin-top: 100px;
  background-color: var(--ion-color-secondary);
  color: #000000;
}

ion-item {
        border-bottom: 1px solid #150931;
        white-space: pre-line;
    }

.content-container {
  background-color: var(--ion-color-secondary);
  border-radius: 20px;
  padding: 10px;
  color: #000000;
}

ion-toolbar {
    --color: var(--ion-color-white) !important;
}

.item-md.item-block .item-inner {
  border-bottom: transparent;
}

.header-container {
  background-color: var(--ion-color-primary);
  padding-left: 20px;
  height: 110px;
}

.header-logo {
  margin-top: 50px;
}

.font-size-1rem {
  font-size: 1rem !important;
}

.header-icons-div {
  height: 22px;
  background-color: var(--ion-color-primary);
  position: absolute;
  bottom: 0;
  right: 0;
  margin-bottom: 1px;
  margin-right: 20px;
}

.header-icon {
  background-color: var(--ion-color-primary);
  color: #FFFFFF;
  font-size: 20px;
}

.weekview-header, .weekview-allday-table, .weekview-normal-event-container {
  background-color: var(--ion-color-secondary);
}

.weekview-allday-table {
  height: auto !important;
  min-height: 50px !important;
}

.weekview-allday-content-wrapper {
  height: auto !important;
  min-height: 51px !important;
}

.weekview-normal-event-container {
  display: block !important;
  position: relative !important;
  margin-top: 2px !important;
  max-height: 350px !important;
  overflow: scroll !important;
  scrollbar-width: none !important;
}

.calendar-hour-column, .weekview-header {
  border: 0px !important;
}

.weekview-header, .slides-container {
  border: 0px;
}

.weekview-normal-event-container {
  bottom: 0px;
}

.padding-bottom-50 {
  padding-bottom: 50px !important;
}

.weekview-container {
  width: 95% !important;
  margin: auto;
}

.swiper-slide, swiper-slide-active {
  width: 100% !important;
}

.primary {
  background-color: var(--ion-color-primary);
  color: var(--ion-color-white) !important;
}

.calendar-event-inner {
  height: 100%;
}

.background-secondary {
  background-color: var(--ion-color-secondary) !important;
  color: #000000 !important;
}

.background-white {
  background-color: var(--ion-color-white);
}

.background-transparent {
  background-color: transparent;
}

ion-input {
  scrollbar-width: none;
  background-color: var(--ion-color-white) !important;
  border-radius: 20px;
  color: var(--ion-color-primary) !important;
  text-align: center;
  input {
      text-align: center;
      ::-webkit-input-placeholder {
          text-align: center;
      }
    }
    border-bottom-color: transparent;
}

.border-radius-20px {
  border-radius: 20px;
}

.border-radius-5px {
  border-radius: 5px;
}

.overflow-scroll {
  overflow: scroll;
}

.no-scrollbar {
  scrollbar-width: none;
}

.margin-10 {
  margin: 10px;
}

.margin-0 {
  margin: 0px;
}

.margin-left-0 {
  margin-left: 0px;
}

.min-height-30px {
  min-height: 30px;
}

.margin-bottom-1 {
  margin-bottom: 1px;
}

.display-inline-block {
  display: inline-block;
}

.width-70 {
  width: 70%;
  margin-left: 0;
  display: inline-box
}

.width-100 {
  width: 100%;
}

.width-18 {
  width: 18%;
}

.width-20 {
  width: 20%;
}

.width-auto {
  width: auto;
}

.width-40 {
  width: 40%;
}

.width-100px {
  width: 100px;
}

.text-align-right {
  text-align: right;
}

.text-align-left {
  text-align: left;
}

.border-top {
  border-top: 1px solid;
  margin-top: 5px;
}

.border-right {
  border-right: 1px solid;
}

.height-100 {
  height: 100%;
}

.margin-bottom-10px {
  margin-bottom: 10px !important;
}

.height-10 {
  height: 10%;
}

.height-70 {
  height: 70%;
}

.height-50 {
  height: 50%;
}

.height-45 {
  height: 45%;
}

.height-20 {
  height: 20%;
}

.min-height-150px {
  min-height: 150px;
}

.min-height-100px {
  min-height: 100px;
}

.no-padding {
  padding: 0;
}

.margin-5 {
  margin: 5px;
}

.margin--1 {
  margin: -1 !important;
}

.margin-bottom-10 {
  margin-bottom: 10px !important;
}

.margin-vertical-center-parent {
  display: flex;
}

.margin-vertical-center {
  margin: auto 0;
}

.label-md {
  height: 90%;
}

.block {
  display: block;
}

p {
  white-space: normal;
  text-align: left;
}

.white {
  color: var(--ion-color-white) !important;
}

.margin-right-10 {
  margin-right: 10px;
}

.margin-top-0 {
  margin-top: 0px;
}

.margin-top-10 {
  margin-top: 10px !important;
}

.margin-auto {
  margin: auto;
}

.margin-auto-important {
  margin: auto !important;
}

.text-align-center {
  text-align: center;
}

.padding-left-20 {
  padding-left: 20px;
}

.padding-10 {
  padding: 10px;
}

.padding-5 {
  padding: 5px;
}

.border-bottom-1 {
  border-bottom: 1px solid !important;
}

.padding-left-20 {
  padding-left: 20px;
}

.padding-bottom-10 {
  padding-bottom: 10px;
}

.padding-top-10 {
  padding-top: 10px;
}

.flex {
  display: flex;
}

.overflow-x-hidden {
  overflow-x: hidden;
}

.max-width-50 {
  max-width: 50%;
}

.width-50 {
  width: 50%;
}

.max-height-30px {
  max-height: 30px;
}

.overflow-x-hidden {
  overflow-x: hidden;
}

.overflow-y-hidden {
  overflow-y: hidden;
}

.max-width-400px {
  max-width: 400px;
}

.width-300px {
  width: 300px;
}

.height-150px {
  height: 150px;
}

.height-100px {
  height: 100px;
}

.height-80 {
  height: 80%;
}

.height-13 {
  height: 13%;
}

.text-overflow {
  text-overflow: hidden;
}

.item-inner {
  border-bottom-color: transparent;
}

.one-line {
  white-space: nowrap;
}

.project-color {
  width: 20px;
  height: 20px;
  border-radius: 10px;
}

.width-90 {
  width: 90%;
}

.margin-right-0 {
  margin-right: 0px;
}

.text-align-right-important {
  text-align: right !important;
}

.text-align-left {
  text-align: left !important;
}

.table-bordered {
  border: 1px solid #000000;
}

.height-90 {
  height: 90%;
}

.min-width-175px {
  min-width: 175px;
}

.min-width-60px {
  min-width: 60px !important;
}

.min-width-30px {
  min-width: 30px;
}

.padding-0 {
  padding: 0;
}

.overflow-scroll {
  overflow: scroll;
}

.overflow-y-scroll {
  overflow-y: scroll;
}

.size-20px {
  height: 20px;
  width: 20px;
}

.max-height-500px {
  max-height: 500px;
}

.margin-10px {
  margin: 10px;
}

.font-white {
  color: #FFFFFF;
}

.calendar-event-inner {
  overflow: hidden;
}

